
           Added a refresh option to restart the QuoteServer from the QuoteServerDialog.

20100728:  Delete chart object segs fixed.

20100729:  Spun off chart object dialog code into separate classes to enable non blocking versions.

20100906:  ************************** BIG CHANGES *********************************************
           Qtstalker now uses the Qwt charting library for all charting functions. http://qwt.sourceforge.net
           Please install the most recent version before compiling qtstalker. 

           ChartObjectDataBase format has changed. Please delete the chartObjectIndex table from the
           ~/.qtstalker/data.sqlite file before starting qtstalker. NOTE: There have been so many changes
           i have lost track, so it might be best to start with a fresh new install by deleting or renaming
           your ~/.qtstalker directory before starting it.

           All indicator dialogs have been recoded into non blocking versions.

           Removed Cursor / Chart Object toolbar. Use chart context menu.

           NOTE: Features not implemeted yet please see TODO priority list.

20100907:  Removed PrefDialog class from lib and replaced with all non blocking dialogs.

20100908:  Scale to screen is now working.

20100909:  Chart objects now interactive as before.

20100911:  Chart and group panel now have new non blocking dialogs for all the toolbar and menu functions.

           Changed format for the appearance of symbols in the chart and group panel lists.
           They are now EXCHANGE:SYMBOL format for more efficient identification.

20100913:  Script panel now has new non blocking dialogs for all the toolbar and menu functions.

20100914:  Data window now working.

           Script API changed for INDICATOR,SET_PLOT command. Added Z parm to determine the order of plots to draw.

           Fixed CUS PLOT_STYLE and missing plots.

20100915:  Removed the last of the blocking dialog and messageboxes. YAY!


