@@ -6,13 +6,23 @@ CONFIG += thread warn_on debug
 INCLUDEPATH += ../../../lib
 
 LIBS += -L../../../lib -lqtstalker
-LIBS += -lqwt
 
 QMAKE_CXXFLAGS += -rdynamic -ffast-math -O2
 
 unix {
   # qmake automatically adds /usr/lib
   INCLUDEPATH += /usr/include/qt4/Qt
+
+  # for Ubuntu
+  INCLUDEPATH += /usr/include/qwt-qt4
+
+  # Qwt library (check if ubuntu system)
+  exists(/usr/lib/libqwt-qt4.so) {
+    LIBS += -lqwt-qt4
+  } else {
+    LIBS += -lqwt
+  }
+
   exists(/usr/local/lib) {
     LIBS += -L/usr/local/lib
   }
