@@ -1,8 +1,8 @@
 /*
  *  Qtstalker stock charter
- * 
+ *
  *  Copyright (C) 2001-2010 Stefan S. Stratigakos
- * 
+ *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
  *  the Free Software Foundation; either version 2 of the License, or
@@ -15,7 +15,7 @@
  *
  *  You should have received a copy of the GNU General Public License
  *  along with this program; if not, write to the Free Software
- *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, 
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
  *  USA.
  */
 
@@ -23,41 +23,17 @@
 // Plots the date area of a chart
 // *************************************************************************************************
 
-#ifndef PLOT_PICKER_HPP
-#define PLOT_PICKER_HPP
+#ifndef PICKER_MACHINE_HPP
+#define PICKER_MACHINE_HPP
 
-#include <qwt_plot_picker.h>
-#include <qwt_plot.h>
 #include <qwt_picker_machine.h>
-#include <QMouseEvent>
-#include <QColor>
+#include <QEvent>
 
-class PlotPicker : public QwtPlotPicker
+class PickerMachine: public QwtPickerMachine
 {
-  Q_OBJECT
-
-  signals:
-    void signalMouseMove (QPoint);
-    void signalMouseClick (int, QPoint);
-    void signalMouseDoubleClick (int, QPoint);
-  
   public:
-    PlotPicker (QwtPlot *);
-    void setCrossHairs (int);
-    void setColor (QColor);
-
-  protected:
-    virtual void widgetMouseMoveEvent (QMouseEvent *);
-    virtual void widgetMousePressEvent (QMouseEvent *);
-    virtual void widgetMouseDoubleClickEvent (QMouseEvent *);
-    virtual QwtText trackerText (const QPoint &) const;
-    virtual QwtText trackerText (const QwtDoublePoint &) const;
-    virtual void widgetLeaveEvent (QEvent *);
-    virtual QwtPickerMachine * stateMachine (int) const;
-
-  private:
-    int _crossHairs;
-    QColor _color;
+    PickerMachine ();
+    virtual QwtPickerMachine::CommandList transition (const QwtEventPattern &, const QEvent *e);
 };
 
 #endif
