@@ -12,6 +12,7 @@ QMAKE_CXXFLAGS += -rdynamic -ffast-math -O2
 unix {
   # qmake automatically adds /usr/lib
   INCLUDEPATH += /usr/include/qt4/Qt
+
   exists(/usr/local/lib) {
     LIBS += -L/usr/local/lib
   }
