@@ -1,5 +1,5 @@
 /* XPM */
-static const char *crosshair[]={
+static const char *crosshair_xpm[]={
 "16 16 3 1",
 ". c None",
 "# c #000000",
